--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
 </head>
 <body>
     Hi There
+    <a href="assets/solvinux/favicon.ico" target="_blank" rel="noopener noreferrer">Solvinux Icon ICO</a>
+    <a href="assets/solvinux/Solvinux-circle.png" target="_blank" rel="noopener noreferrer">Solvinux Icon Circle</a>
+    <a href="assets/solvinux/Solvinux-logo-circle.png" target="_blank" rel="noopener noreferrer">Solvinux Logo Circle</a>
+    <a href="assets/solvinux/Solvinux-logo.png" target="_blank" rel="noopener noreferrer">Solvinux Logo Square</a>
+    <a href="assets/solvinux/Solvinux.png" target="_blank" rel="noopener noreferrer">Solvinus Icon Square</a>
 </body>
 </html>
