--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     Hi There
     <a href="assets/solvinux/favicon.ico" target="_blank" rel="noopener noreferrer">Solvinux Icon ICO</a>
-    <a href="assets/solvinux/Solvinux-circle.png" target="_blank" rel="noopener noreferrer">Solvinux Icon Circle</a>
-    <a href="assets/solvinux/Solvinux-logo-circle.png" target="_blank" rel="noopener noreferrer">Solvinux Logo Circle</a>
-    <a href="assets/solvinux/Solvinux-logo.png" target="_blank" rel="noopener noreferrer">Solvinux Logo Square</a>
-    <a href="assets/solvinux/Solvinux.png" target="_blank" rel="noopener noreferrer">Solvinus Icon Square</a>
+    <a href="assets/solvinux/icon-c.png" target="_blank" rel="noopener noreferrer">Solvinux Icon Circle</a>
+    <a href="assets/solvinux/logo-c.png" target="_blank" rel="noopener noreferrer">Solvinux Logo Circle</a>
+    <a href="assets/solvinux/logo.png" target="_blank" rel="noopener noreferrer">Solvinux Logo Square</a>
+    <a href="assets/solvinux/icon.png" target="_blank" rel="noopener noreferrer">Solvinus Icon Square</a>
 </body>
 </html>
