--- a/index.html
+++ b/index.html
@@ -8,11 +8,93 @@
     
 </head>
 <body>
-    Hi There
-    <a href="assets/solvinux/favicon.ico" target="_blank" rel="noopener noreferrer">Solvinux Icon ICO</a>
-    <a href="assets/solvinux/icon-c.png" target="_blank" rel="noopener noreferrer">Solvinux Icon Circle</a>
-    <a href="assets/solvinux/logo-c.png" target="_blank" rel="noopener noreferrer">Solvinux Logo Circle</a>
-    <a href="assets/solvinux/logo.png" target="_blank" rel="noopener noreferrer">Solvinux Logo Square</a>
-    <a href="assets/solvinux/icon.png" target="_blank" rel="noopener noreferrer">Solvinus Icon Square</a>
+    <h1 align="center">Ola 👋, It's TenTraicion</h1>
+    <h2 align="center">A Programmer from Abyss</h2><hr>
+    <p align="center">
+        <a href="https://twitter.com/TenTraicion" style="text-decoration: none;">
+            <img src="https://img.shields.io/twitter/follow/TenTraicion?logo=twitter&style=social&label=%20Followers" alt="Twitter Followers">
+        </a>
+        <a href="https://tentraicion.github.io" style="text-decoration: none;">
+            <img src="https://img.shields.io/github/followers/TenTraicion?label=%20Followers&style=social" alt="Github Followers">
+        </a>
+        <a href="https://discord.com/invite/BCf59exHJV" style="text-decoration: none;">
+            <img src="https://badgen.net/discord/online-members/BCf59exHJV" alt="Solvinux Discord Server">
+        </a>
+    </p>
+    <p align="center">
+        <img src="https://raw.githubusercontent.com/abhisheknaiidu/abhisheknaiidu/master/code.gif" alt="Coder">
+    </p>
+    <p align="center"><img src="github-metrics.svg" alt="Details"></p>
+    <h2 align="center">Something about Me</h2>
+    <ul>
+        <li> 🔭 I’m currently working on <a href="https://github.com/TenTraicion/hibi-ciento" style="text-decoration: none;">Hibi-Ciento</a></li>
+        <li> 🌱 I’m currently learning <strong>Full-Stack Web Developement</strong></li>
+        <li> 🤝 I’m working with <a href="https://github.com/Solvinux" style="text-decoration: none;">Solvinux Solution Inc.</a> & <a href="https://github.com/Platinamo" style="text-decoration: none;">Platinamo</a></li>
+        <li> ⚡ Life Motto: <strong>Not Friends, Not Enemies, Just Strangers with Memories..!</strong></li>
+        <li> 🤔 Fun Fact: <strong>"There are two ways to write error-free programs; only the third one works!"</strong></li>
+    </ul>
+    <p>I love connecting with different people so if you want to say hi, I'll be happy to meet you more! I am a simple human being trying to lead a simple life. Nothing more and nothing less. I am a music lover and also love natural stormy weather. Think about having a sip of coffee in a rainy day sitting on a chair laying the legas on the grill of the balcony viwewing the sea beach in storm with the coldest music as your partner. I thrive for having these moments.</p>
+    <p align="center"><strong>Wanna Listen some music with me?</strong></p>
+    <p align="center"><a href="https://spotify-github-profile.vercel.app/api/view?uid=f0k6l3nba1l5g2bo3p30rkjgn&redirect=true" style="text-decoration: none;">
+        <img src="https://spotify-github-profile.vercel.app/api/view?uid=f0k6l3nba1l5g2bo3p30rkjgn&cover_image=true&theme=default&bar_color_cover=false" alt="Spotify Player">
+    </a></p>
+    <p align="center"><strong>Connect with Me:</strong></p>
+    <p align="center">
+        <a href="https://twitter.com/TenTraicion" style="text-decoration: none;">
+            <img src="https://img.shields.io/badge/Twitter-%231877F2.svg?&style=flat-square&logo=twitter&logoColor=white&color=071A2C" alt="Twitter Profile">
+        </a>
+        <a href="https://linkedin.com/in/tentraicion" style="text-decoration: none;">
+            <img src="https://img.shields.io/badge/LinkedIn-%230077B5.svg?&style=flat-square&logo=linkedin&logoColor=white&color=071A2C" alt="Linked In Profile">
+        </a>
+        <a href="https://fb.com/tentraicion" style="text-decoration: none;">
+            <img src="https://img.shields.io/badge/Facebook-%231877F2.svg?&style=flat-square&logo=facebook&logoColor=white&color=071A2C" alt="Facebook Profile">
+        </a>
+        <a href="https://instagram.com/tentraicion" style="text-decoration: none;">
+            <img src="https://img.shields.io/badge/Instagram-%23E4405F.svg?&style=flat-square&logo=instagram&logoColor=white&color=071A2C" alt="Instagram Profile">
+        </a>
+        <a href="https://codepen.io/tentraicion" style="text-decoration: none;">
+            <img src="https://img.shields.io/badge/CodePen-%230077B5.svg?&style=flat-square&logo=codepen&logoColor=white&color=071A2C" alt="CodePen Profile">
+        </a>
+        <a href="https://wa.me/message/25KLOLUBX7WQF" style="text-decoration: none;">
+            <img src="https://img.shields.io/badge/WhatsApp-%230077B5.svg?&style=flat-square&logo=whatsapp&logoColor=white&color=071A2C" alt="WhatsApp Profile">
+        </a>
+    </p>
+    <p align="center"><strong>Or,</strong></p>
+    <ul>
+        <li>Open your Terminal</li>
+        <li>Run:</li>
+    </ul>
+    <code>npx tentraicion</code>
+    <p align="center"><strong>Support Me</strong></p>
+    <p align="center">
+        <a href="https://www.buymeacoffee.com/tentraicion" style="text-decoration: none;"><img src="https://img.shields.io/badge/-Buy%20Me%20A%20Coffee-yellow?style=social&logo=buymeacoffee" alt="Sponsor"></a>
+        <a href="https://ko-fi.com/tentraicion" style="text-decoration: none;"><img src="https://img.shields.io/badge/-Buy%20Me%20A%20Coffee-yellow?style=social&logo=kofi" alt="Sponsor"></a>
+    </p>
+    <p align="center"><strong>Qoutes</strong></p>
+    <code>
+        const quote = {
+            chris-pine: "Programming isn't about what you know; it's about what you can figure out."
+            dennis-ritchie: "The only way to learn a new programming language is by writing programs in it."
+            burt-rutan: "Testing leads to failure, and failure leads to understanding."
+            thomas-fuchs: "The best error message is the one that never shows up."
+            jason: "Don't write better error messages, write code that doesn't need them."
+        };
+    </code>
+    <p align="center"><strong>Stats & Others</strong></p>
+    <p align="center"><img src="https://github-profile-trophy.vercel.app/?username=tentraicion&no-frame=true&theme=nord&row=1" alt="Trophy"></p>
+    <p align="center">
+        <img src="https://github-readme-stats.vercel.app/api?username=tentraicion&show_icons=true&theme=moltack&count_private=true" alt="Stats" width="400px">
+        <img src="http://github-readme-streak-stats.herokuapp.com?user=tentraicion&theme=garden&hide_border=true&date_format=M%20j%5B%2C%20Y%5D" alt="Streaks" width="400px">
+    </p>
+    <p align="center"><img src="https://activity-graph.herokuapp.com/graph?username=tentraicion&theme=react-dark&bg_color=20232a&hide_border=true" alt="Contribution Graph"></p>
+    <p align="left">
+        <a href="mailto:tentraicion@gmail.com" style="text-decoration: none;">
+            <img src="https://img.shields.io/badge/Ask%20me-anything-1abc9c.svg" alt="Ask TenTraicion" align="left">
+        </a>
+        <a href="https://tentraicion.github.io" style="text-decoration: none;">
+            <img src="https://komarev.com/ghpvc/?username=tentraicion&label=Visitors&color=0e75b6&style=flat" alt="Viewers Count" align="right">
+        </a>
+    </p>
+    <p align="center"><img src="https://raw.githubusercontent.com/bornmay/bornmay/Update/svg/Bottom.svg" alt="Wave"></p>
 </body>
 </html>
